--- a/app.css
+++ b/app.css
@@ -3,6 +3,11 @@
   flex-direction: row;
   justify-content: center;
   background-color: #303030;
+  height: 94%
+}
+
+.the-table{
+  height: 75%;
 }
 
 .right {
