--- a/app.css
+++ b/app.css
@@ -7,6 +7,7 @@
 }
 
 .the-table{
+  height: 75%;
 }
 
 .right {
@@ -16,9 +17,7 @@
 .options-form {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  padding-left: 10px;
-  padding-right: 10px;
+  justify-content: center;
   align-items: baseline;
 }
 .text {
