--- a/app.css
+++ b/app.css
@@ -1,9 +1,16 @@
+.root {
+  height: inherit;
+}
+
+.top {
+
+}
+
 .main-page {
   display: flex;
   flex-direction: row;
   justify-content: center;
   background-color: #303030;
-  height: 100%
 }
 
 .the-table{
@@ -44,6 +51,10 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: baseline;
+}
+
+.left-options-item-right {
+  width: 30px;
 }
 
 .interal {
