--- a/app.css
+++ b/app.css
@@ -17,6 +17,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	font-family: 'Josefin Sans', sans-serif;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -44,14 +45,15 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
+
 #map {
   height: 30px;
 }
 
-table {
+/*table {
 	border-collapse: collapse;
 	border-spacing: 0;
-}
+}*/
 
 *, *::before, *::after {
 	box-sizing: border-box;
@@ -65,11 +67,26 @@ table {
 
 }
 
+.tool-bar {
+	display: flex;
+	justify-content: space-between;
+	flex-direction: row;
+	align-items: baseline;
+	width: 100%;
+}
+
+.tool-bar-right {
+	width: 20%;
+	display: flex;
+	justify-content: space-between;
+	flex-direction: row;
+}
+
 .main-page {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background-color: #303030;
+  background-color: #ffffff;
 }
 
 .the-table{
@@ -95,7 +112,7 @@ table {
 }
 
 .text {
-  color: white;
+  color: black;
 }
 
 .haversine {
@@ -145,4 +162,9 @@ table {
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+.title {
+	color: white;
+	font-size: 120%;
 }
