--- a/app.css
+++ b/app.css
@@ -153,15 +153,21 @@ q:before, q:after {
 }
 
 .interal {
+	height: 350px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 .drop {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
+}
+
+.dropzone-text {
+	text-align: center;
+	vertical-align: middle;
 }
 
 .title {
