--- a/app.css
+++ b/app.css
@@ -143,6 +143,7 @@ q:before, q:after {
 
 .left-options-item-right {
   width: 30% !important;
+	margin-right: 5px;
 }
 
 .update-textbox {
@@ -154,6 +155,12 @@ q:before, q:after {
   width: 25% !important;
   margin-right: 5px;
   margin-left: 10px;
+}
+
+.left-options-item-left {
+	width: 30% !important;
+	margin-right: 5px;
+	margin-left: 5px;
 }
 
 .interal {
